--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://warehouse.ninja/rocket-logistics">
+  <meta property="og:url" content="https://deliverwithrocket.com/">
   <meta property="og:title" content="Rocket Logistics Inc - Amazon DSP Partner in Staten Island">
   <meta property="og:description" content="Amazon DSP operating from Edison, NJ (DJE5 warehouse). Contact, hours, owner info, and comprehensive Amazon DSP directory.">
-  <meta property="og:image" content="https://example.com/rocket-logistics-og.jpg">
+  <meta property="og:image" content="https://app.warehouse.ninja/uploads/ic_logos/rocket-logistics-inc-logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://warehouse.ninja/rocket-logistics">
+  <meta property="twitter:url" content="https://deliverwithrocket.com/">
   <meta property="twitter:title" content="Rocket Logistics Inc - Amazon DSP Partner in Staten Island">
   <meta property="twitter:description" content="Amazon DSP operating from Edison, NJ (DJE5 warehouse). Contact, hours, owner info, and comprehensive Amazon DSP directory.">
-  <meta property="twitter:image" content="https://example.com/rocket-logistics-twitter.jpg">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://warehouse.ninja/rocket-logistics">
+  <link rel="canonical" href="https://deliverwithrocket.com/">
 
   <!-- Schema.org markup -->
   <script type="application/ld+json">
@@ -34,9 +33,9 @@
     "name": "Rocket Logistics Inc",
     "image": "",
     "@id": "",
-    "url": "https://warehouse.ninja/rocket-logistics",
-    "telephone": "+1-415-385-3388",
-    "email": "rocketlogistics.mli@gmail.com",
+    "url": "https://deliverwithrocket.com/",
+    "telephone": "+1-415-3*5-3**8",
+    "email": "rocke***ogistics.m*i@gmail.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "1145 King Georges Post Rd",
@@ -594,7 +593,7 @@
       </div>
 
       <div class="card hours-card">
-        <h2><i class="fas fa-clock"></i> HOURS OF OPERATION</h2>
+        <h2><i class="fas fa-clock"></i> Hours of Operation</h2>
         <div class="hours-grid">
           <div>Sunday - Saturday</div>
           <div>10:10 AM</div>
